--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
-    "karma-jasmine": "^4.0.1",
     "karma": "^6.3.4",
-    "karma-chrome-launcher": "^3.1.0"
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-jasmine": "^4.0.1"
   },
   "dependencies": {
   }
